# rusty-crab

./: .gitignore  .gitmodules  .obfuscate.toml  .rustfmt.toml  Cargo.toml  README.md  default_config.toml  flake.nix
.github/workflows/: main.yaml
src/: lib.rs  main.rs
src/app/: config.rs  logging.rs  mod.rs
src/explorers/: allegory_adapter.rs  explorer.rs  mod.rs
src/explorers/allegory/: ai.rs  bag.rs  communication.rs  crate_adapter.rs  explorer.rs  knowledge.rs  logging.rs  mod.rs  readme.md
src/explorers/cetto/: cetto_explorer.rs  communication.rs  knowledge.rs  mod.rs
src/explorers/example/: example_explorer.rs  mod.rs
src/explorers/hardware_accelerated/: bag.rs  explorer.rs  galaxy_knowledge.rs  logging_channel.rs  mod.rs  orchestrator_communicator.rs  planets_communicator.rs  probability_estimator.rs  round_executor.rs
src/explorers/hardware_accelerated/communication/: logging_channel.rs  mod.rs  orchestrator_communicator.rs  planets_communicator.rs
src/explorers/hardware_accelerated/planning/: global.rs  local.rs  mod.rs  recipes.rs
src/explorers/samufaz/: explorer.rs  galaxy_knowledge.rs  mod.rs  round_executor.rs
src/explorers/samufaz/communication/: logging_channel.rs  mod.rs  orchestrator_communicator.rs  planets_communicator.rs
src/explorers/samufaz/planning/: global.rs  local.rs  recipes.rs
src/gui/: event_buffer.rs  game.rs  mod.rs  routines.rs  types.rs
src/orchestrator/: auto_update_strategy.rs  channel_demultiplexer.rs  communication_center.rs  core.rs  example_explorer.rs  explorer.rs  galaxy.rs  galaxy_builder.rs  logging_channel.rs  manual_update_strategy.rs  mod.rs  orchestrator.rs  planet_factory.rs  planets.rs  probability.rs  state.rs  update_strategy.rs
src/orchestrator/communication/: channel_demultiplexer.rs  communication_center.rs  explorers_communication_center.rs  logging_channel.rs  mod.rs  planets_communication_center.rs
src/orchestrator/init/: galaxy_builder.rs  mod.rs  planet_factory.rs
src/orchestrator/update_strategy/: auto_update_strategy.rs  manual_update_strategy.rs  mod.rs
src/planet/: ai.rs  create.rs  mod.rs
