[package]
name = "rusty-crab-ap2025"
version = "2.0.0"
edition = "2024"
readme = false

description = "The rusty crab group module, used in the unitn ap2025 class. It contains the planet definition."
license = "CC-BY-NC-ND-4.0"

exclude = ["src/main.rs"]

[dependencies]
common-game = "3.0.0"
crossbeam-channel = "0.5.15"
chrono = "0.4.42"
log = "0.4.29"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
fern = { version = "0.7.1", features = ["colored"] }
config = "0.15.19"
rand = "0.9.2"

[dev-dependencies]
ctor = "0.6.3"
