[package]
name = "rusty-crab-ap2025"
version = "2.0.0-beta.3"
edition = "2024"
readme = false

description = "The rusty crab group module, used in the unitn ap2025 class. It contains the planet definition."
license = "CC-BY-NC-ND-4.0"

[dependencies]
common-game = "3.0.0"
crossbeam-channel = "0.5.15"
chrono = "0.4.42"
log = "0.4.29"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
fern = { version = "0.7.1", features = ["colored"] }
rand = "0.9.2"
config = "0.15.19"
ctor = "0.6.3"
# Planets
the-compiler-strikes-back = "0.2.0"
air_fryer = {git = "https://github.com/Advanced-Panic-Programming/AirFryer.git"} # panic out of oxygen
rustrelli = {git = "https://github.com/Rustrelli/rustrelli.git"}
carbonium = {git = "https://github.com/AP-2025-No-Crustaceans-Sky/Carbonium.git"} # no crustacean's sky
one-million-crabs = {git = "https://github.com/Advance-Programming-2025/One_million_crabs.git", branch = "dev"}
HWHAB = { package = "Planet", git = "https://github.com/Houston-we-have-a-borrow/Planet.git"} # Houston-we-have-a-borrow
rust-eze = {package = "pub-rust-eze", git = "https://github.com/Rust-eze-Advanced-Programming/pub-Rust-eze.git"}
bevy = "0.17.0"
bevy_tweening = "0.14.0"

[dev-dependencies]
ctor = "0.6.3"
